[gd_scene load_steps=9 format=2]

[ext_resource path="res://Skripty/Menu.gd" type="Script" id=1]
[ext_resource path="res://fontik.tres" type="DynamicFont" id=2]
[ext_resource path="res://selected_button_theme.tres" type="StyleBox" id=3]
[ext_resource path="res://non_selected_theme.tres" type="StyleBox" id=4]
[ext_resource path="res://44d71d67690591.5b4336404e6fd.jpg" type="Texture" id=5]
[ext_resource path="res://Scény/Adventurer.ttf" type="DynamicFontData" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 6 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -1.0
margin_right = -3.0
margin_bottom = -1.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="44D71D676905915B4336404E6Fd" type="Sprite" parent="."]
position = Vector2( 963.5, 541 )
scale = Vector2( 1.37071, 1.3723 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.0
margin_top = -536.0
margin_right = 292.0
margin_bottom = 533.0
custom_constants/separation = 35
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 352.0
margin_right = 558.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 2 )
text = "Shorty & Cyclo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpustitHru" type="Button" parent="VBoxContainer"]
margin_top = 467.0
margin_right = 558.0
margin_bottom = 527.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Možnosti" type="Button" parent="VBoxContainer"]
margin_top = 562.0
margin_right = 558.0
margin_bottom = 622.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VypnutHru" type="Button" parent="VBoxContainer"]
margin_top = 657.0
margin_right = 558.0
margin_bottom = 717.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/SpustitHru" to="." method="_on_SpustitHru_pressed"]
[connection signal="pressed" from="VBoxContainer/Možnosti" to="." method="_on_Monosti_pressed"]
[connection signal="pressed" from="VBoxContainer/VypnutHru" to="." method="_on_VypnutHru_pressed"]
